--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/poppins": "^5.0.13",
     "@mui/material": "^5.15.13",
+    "@tanstack/react-query": "^5.34.1",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
